--- a/index.html
+++ b/index.html
@@ -11,7 +11,22 @@
 </head>
 <body>
     <header>
-        <h1>arya</h1>
+        <div class="container d-flex justify-content-between alignitems-center">
+            <div>START BOOTSTRAP</div>
+            <nav>
+                <div>
+                    <button></button>
+                    <div>
+                        <ul>
+                            <li><a href="">PROFILE</a></li>
+                            <li><a href="">ABOUT</a></li>
+                            <li><a href="">CONTACT</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </nav>
+        </div>
     </header>
 
     <main></main>
