--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <link rel="stylesheet" href="./asset/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
 </head>
-<body>
+
+<body class="debug">
     <header>
-        <div class="container d-flex justify-content-between alignitems-center">
+        <div class=" debug container d-flex justify-content-between alignitems-center">
             <div>START BOOTSTRAP</div>
-            <nav>
-                <div>
-                    <button></button>
+            <nav class="navbar navbar-expand-lg bg-body-tertiary">
+                <div class="container-fluid">
+                    <button class="navbar"></button>
                     <div>
                         <ul>
                             <li><a href="">PROFILE</a></li>
@@ -29,10 +31,33 @@
         </div>
     </header>
 
-    <main></main>
+    <main>
+
+        <div class="debug">
+            <section class="container py-5 d-flex flex-column align-items-center">
+                <div class="immagine">
+                    <img src="./asset/img/avatar.svg" alt="">
+                </div>
+                <h1 class="nome">START BOOTSTRAP</h1>
+                <div class="d-flex align-items-center">
+                    <hr>
+                    <i class="fa-solid fa-star"></i>
+                    <hr>
+                </div>
+                <div class="abilità">
+                    GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
+                </div>
+            </section>
+        </div>
+
+
+        
+
+    </main>
 
 
     <footer></footer>
-    
+
 </body>
+
 </html>
