--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 <body class="debug">
     <header class="bg-success-subtle">
-        <div class=" debug container h100">
-            <div class="row h-100 align-items-center">
+        <nav class="conatiner h-100">
+            <div class="row h-100 align-items-centre">
                 <div class="col">
                     <div class="text-white">
                         START BOOTSTRAP
@@ -39,7 +39,7 @@
 
             </div>
 
-        </div>
+        </nav>
     </header>
 
     <main>
@@ -50,7 +50,7 @@
 
                     <div class="col-12">
                         <div class="d-flex text-white justify-content-center">
-                            img
+                            <img src="./asset/img/avatar.svg" alt="">
                         </div>
                     </div>
                     <div class="col-12">
@@ -95,25 +95,25 @@
 
         <section class="cards bg-success-subtle">
             <div class="container">
-                <div class="row">
+                <div class="row d-flex">
 
-                    <div class="col-sm-12 col-md-6 col-xl-4">
-                        One of three columns
+                    <div class="col">
+                        <img class="rounded" src="./asset/img/cabin.png" alt="">
                     </div>
-                    <div class="col-sm-12 col-md-6 col-xl-4">
-                        One of three columns
+                    <div class="col">
+                        <img class="rounded" src="./asset/img/cake.png" alt="">
                     </div>
-                    <div class="col-sm-12 col-md-6 col-xl-4">
-                        One of three columns
+                    <div class="col">
+                        <img class="rounded" src="./asset/img/circus.png" alt="">
                     </div>
-                    <div class="col-sm-12 col-md-6 col-xl-4">
-                        One of three columns
+                    <div class="col">
+                        <img class="rounded" src="./asset/img/game.png" alt="">
                     </div>
-                    <div class="col-sm-12 col-md-6 col-xl-4">
-                        One of three columns
+                    <div class="col">
+                        <img class="rounded" src="./asset/img/safe.png" alt="">
                     </div>
-                    <div class="col-sm-12 col-md-6 col-xl-4">
-                        One of three columns
+                    <div class="col">
+                        <img class="rounded" src="./asset/img/submarine.png" alt="">
                     </div>
                 </div>
 
