--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body class="debug">
-    <header class="bg-success-subtle">
+    <header class="bg-dark py-1">
         <nav class="conatiner h-100">
             <div class="row h-100 align-items-centre">
                 <div class="col">
@@ -74,50 +74,46 @@
         </section>
 
 
-        <section class="debug portflio bg-success-subtle">
-            <div class="container">
+        <section class="debug portflio">
+            <div class="container-lg text-center py-3">
                 <div class="row">
 
-                    <div class="col-12">
-                        <div class="d-flex justify-content-center">
-                            PORTFOLIO
-                        </div>
-                    </div>
-                    <div class="col-12">
-                        <div class="d-flex justify-content-center ">
-                            -STELLA-
-                        </div>
+                    <div class="col-12 py-3">
+                        <h2>Portfolio</h2>
+                        <div class="line_star_black"></div>
+                        <i class="bi bi-star-fill"></i>
+                        <div class="line_star_black"></div>
                     </div>
 
                 </div>
             </div>
         </section>
 
-        <section class="cards bg-success-subtle">
-            <div class="container">
-                <div class="row d-flex">
+        <section class="cards bg-success-subtle container-lg">
 
-                    <div class="col">
-                        <img class="rounded" src="./asset/img/cabin.png" alt="">
-                    </div>
-                    <div class="col">
-                        <img class="rounded" src="./asset/img/cake.png" alt="">
-                    </div>
-                    <div class="col">
-                        <img class="rounded" src="./asset/img/circus.png" alt="">
-                    </div>
-                    <div class="col">
-                        <img class="rounded" src="./asset/img/game.png" alt="">
-                    </div>
-                    <div class="col">
-                        <img class="rounded" src="./asset/img/safe.png" alt="">
-                    </div>
-                    <div class="col">
-                        <img class="rounded" src="./asset/img/submarine.png" alt="">
-                    </div>
+            <div class="row gy-2">
+
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img class="img-fluid rounded-4" src="./asset/img/cabin.png" alt="cabin">
                 </div>
-
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img class="img-fluid rounded-4" src="./asset/img/cake.png" alt="cake">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img class="img-fluid rounded-4" src="./asset/img/circus.png" alt="circus">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img class="img-fluid rounded-4" src="./asset/img/game.png" alt="game">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4">
+                    <img class="img-fluid rounded-4" src="./asset/img/safe.png" alt="safe">
+                </div>
+                <div class="col-12 col-md-6 col-lg-4 ">
+                    <img class="img-fluid rounded-4" src="./asset/img/submarine.png" alt="submarine">
+                </div>
             </div>
+
+
         </section>
 
 
