--- a/index.html
+++ b/index.html
@@ -13,32 +13,27 @@
 
 <body class="debug">
     <header class="bg-dark py-1">
-        <nav class="conatiner h-100">
-            <div class="row h-100 align-items-centre">
-                <div class="col">
-                    <div class="text-white">
-                        START BOOTSTRAP
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="hamburger text-white text-end d-md-none">Hamburger</div>
-                    <nav class="menu d-none d-md-block">
-                        <ul class="d-flex text-white justify-content-end">
-                            <li>
-                                <a href="#" class="link-light">PROFILO</a>
-                            </li>
-                            <li>
-                                <a href="#" class="link-light ps-4">ABOUT</a>
-                            </li>
-                            <li>
-                                <a href="#" class="link-light ps-4">CONTACT</a>
-                            </li>
-                        </ul>
-                    </nav>
-                </div>
+        <nav class="navbar navbar-dark navbar-expand-md">
+            <div class="container-lg">
+                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <button class="navbar-toggler" type="button">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                    <ul class="navbar-nav text-end">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" aria-current="page" href="#Portfolio">Portfolio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#About">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="#Contact">Contact</a>
+                        </li>
+                    </ul>
 
+                </div>
             </div>
-
         </nav>
     </header>
 
