--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap</title>
     <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 
@@ -39,30 +40,22 @@
 
     <main>
 
-        <section class=" banner bg-success debug ">
-            <div class="container h-100">
-                <div class="row h-100">
+        <section class=" banner bg-success py-4 debug ">
+            <div class="container-lg text-center">
+                <div class="row">
 
                     <div class="col-12">
-                        <div class="d-flex text-white justify-content-center">
-                            <img src="./asset/img/avatar.svg" alt="">
-                        </div>
+                        <img class="img-fluid " src="./asset/img/avatar.svg" alt="">
                     </div>
                     <div class="col-12">
-                        <div class="d-flex text-white justify-content-center ">
-                            START BOOTSTRAP
-                        </div>
+                        <h1>Start Bootstrap</h1>
                     </div>
                     <div class="col-12">
-                        <div class="d-flex text-white justify-content-center">
-                            -STELLA-
-                        </div>
+                        <div class="line_star_white"></div>
+                        <i class="bi-star-fill"></i>
+                        <div class="line_star_white"></div>
                     </div>
-                    <div class="col-12">
-                        <div class="d-flex text-white justify-content-center">
-                            GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR
-                        </div>
-                    </div>
+                    <p class="col-12">GRAPHIC ARTIST - WEB DESIGNER - ILLUSTRATOR</p>
 
                 </div>
             </div>
@@ -76,7 +69,7 @@
                     <div class="col-12 py-3">
                         <h2>Portfolio</h2>
                         <div class="line_star_black"></div>
-                        <i class="bi bi-star-fill"></i>
+                        <i class="bi-star-fill"></i>
                         <div class="line_star_black"></div>
                     </div>
 
@@ -113,18 +106,16 @@
 
 
         <section class="debug about bg-success">
-            <div class="container">
-                <div class="row">
+            <div class="container-sm py-5">
+                <div class="row text-center">
 
                     <div class="col-12">
-                        <div class="d-flex justify-content-center">
-                            ABOUT
-                        </div>
+                        <h2>ABOUT</h2>
                     </div>
                     <div class="col-12">
-                        <div class="d-flex justify-content-center ">
-                            -STELLA-
-                        </div>
+                        <div class="line_star_white"></div>
+                        <i class="bi-star-fill"></i>
+                        <div class="line_star_white"></div>
                     </div>
 
                     <div class="col-md-6 text-white ">
